--- a/BrainStorm.csproj
+++ b/BrainStorm.csproj
@@ -27,6 +27,7 @@
   <ItemGroup>
     <Folder Include="Areas\Identity\Data\" />
     <Folder Include="Controllers\API\" />
+    <Folder Include="wwwroot\images\article\" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
