--- a/BrainStorm.csproj
+++ b/BrainStorm.csproj
@@ -37,6 +37,8 @@
 
   <ItemGroup>
     <Folder Include="Areas\Identity\Data\" />
+    <Folder Include="BindingModel\" />
+    <Folder Include="ViewModel\" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
