--- a/appsettings.json
+++ b/appsettings.json
@@ -3,6 +3,7 @@
     "BrainStormDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BrainStorm;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
+    "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
     }
