Connection In Linux

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "BrainStormDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BrainStorm;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "BrainStormDbContextConnection": "Server=localhost,1433;Database=BrainStorm;User=SA; password=Kyokushinkaikan03;Trusted_Connection=False;"
   },
   "Logging": {
     "IncludeScopes": false,
