--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,11 @@
 {
+  //Linux connection
+  //"ConnectionStrings": {
+  //  "BrainStormDbContextConnection": "Server=localhost,1433;Database=BrainStorm;User=SA; password=Kyokushinkaikan03;Trusted_Connection=False;"
+  //},
+  //Windows connection
   "ConnectionStrings": {
-    "BrainStormDbContextConnection": "Server=localhost,1433;Database=BrainStorm;User=SA; password=Kyokushinkaikan03;Trusted_Connection=False;"
+    "BrainStormDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BrainStorm;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
