--- a/ClientApp/angular.json
+++ b/ClientApp/angular.json
@@ -30,6 +30,8 @@
               "src/styles.scss"
             ],
             "scripts": [
+              "../node_modules/jquery/dist/jquery.min.js",
+              "../node_modules/materialize-css/dist/js/materialize.min.js"
             ]
           },
           "configurations": {
