--- a/appsettings.json
+++ b/appsettings.json
@@ -4,9 +4,9 @@
   //"BrainStormDbContextConnection": "Server=localhost,1433;Database=BrainStorm;User=SA; password=Kyokushinkaikan03;Trusted_Connection=False;"
   //},
   //Windows connection
-    "ConnectionStrings": {
-      "BrainStormDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BrainStorm;Trusted_Connection=True;MultipleActiveResultSets=true"
-    },
+  "ConnectionStrings": {
+    "BrainStormDbContextConnection": "Server=DESKTOP-CL2N2JD\\SQLEXPRESS;Database=BrainStorm;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
