--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -13,42 +13,42 @@
   "dependencies": {
     "@angular-devkit/build-angular": "^0.803.19",
     "@angular/animations": "^8.2.14",
-    "@angular/cdk": "^7.2.2",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
-    "@angular/http": "~7.0.0",
-    "@angular/material": "^7.2.2",
+    "@angular/http": "~7.2.15",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
-    "core-js": "^2.5.4",
+    "core-js": "^3.4.1",
     "hammerjs": "^2.0.8",
-    "jquery": "^3.3.1",
-    "materialize-css": "^1.0.0-rc.2",
+    "jquery": "^3.4.1",
+    "materialize-css": "^1.0.0",
     "rxjs": "~6.5.3",
-    "web-animations-js": "^2.3.1",
-    "zone.js": "~0.9.1"
+    "web-animations-js": "^2.3.2",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular/cli": "^8.3.19",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
+    "@types/jasmine": "~3.4.6",
+    "@types/jasminewd2": "~2.0.8",
+    "@types/node": "~12.12.8",
+    "codelyzer": "~5.2.0",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.5.3"
+    "karma": "~4.4.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "protractor": "~5.4.2",
+    "ts-node": "~8.5.2",
+    "tslint": "~5.20.1",
+    "typescript": "^3.5.3"
   }
 }
